--- a/04-test-file-trigger-with-wildcard-.yml
+++ b/04-test-file-trigger-with-wildcard-.yml
@@ -7,13 +7,8 @@ trigger:
     - /src/main/resources/test-*.yaml
 
 pool:
-  vmImage: ubuntu-22.04
+  vmImage: 'ubuntu-latest'
 
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
