--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -9,6 +9,7 @@ stages:
   jobs:
   - job: FirstJob
     steps:
+    - bash: echo $(Build.Repository.Name)
     - bash: echo Build FirstJob
     - bash: echo $(PipelineLevelVariable)
     - bash: echo $(Build.BuildNumber)
